[package]
name = "phoenix-api-salloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phoenix-api = { path = "../core", package = "phoenix-api-core" }

serde = { version = "1.0.130" , features = ["derive"] }
static_assertions = "1.1.0"
